# password-analyzer

./: LICENSE  README-NEW.md  README.md  pyproject.toml
password_analyzer/: analyzer.py  cli.py
tests/: test_analyzer.py
