[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-analyzer"
version = "0.1.0"
description = "Password analysis tool"
authors = [{name="Akshat Sharma", email="akshat.studyzone@gmail.com"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
password-analyzer = "password_analyzer.cli:main"
